Fix legal overflow

--- a/pages/legal.scss
+++ b/pages/legal.scss
@@ -1,5 +1,7 @@
 /* Legal */
 .legal {
+	overflow-wrap: anywhere;
+
 	p {
 		margin-bottom: 1em;
 	}
